<resources>
    <string name="app_name">Dictionary</string>
    <string name="add_word">Add word</string>
    <string name="keyword">Keyword:</string>
    <string name="translation">Translation:</string>
    <string name="enter_keyword">Enter a keyword</string>
    <string name="enter_translation">Enter a translation</string>
    <string name="add">Add</string>
    <string name="input_error">Input error</string>
    <string name="word_picture">word picture</string>

    <string name="open_album">Open Album</string>
    <string name="grant_permission">Grant Permission</string>

    <string name="permission_not_granted">App requires access to storage to access items stored in MediaStore.</string>
</resources>