<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/enter_keyword"
                    android:text="@string/keyword"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/keywordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="13dp"
                    android:layout_marginRight="13dp"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    tools:ignore="SpeakableTextPresentCheck">

                    <requestFocus />
                </EditText>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/enter_translation"
                    android:text="@string/translation"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/translationEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="13dp"
                    android:layout_marginRight="13dp"
                    android:layout_marginBottom="8dp"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <ImageButton
            android:id="@+id/image_add"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/word_picture"
            android:src="@drawable/ic_baseline_photo_library_100" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="12dp"
            android:text="@string/add" />

    </LinearLayout>


</ScrollView>